# tomojax

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  guide.md  justfile  optimisation-plan.md  performance-testing.md  pixi.toml  projector_parallel_jax.py  pyproject.toml
.agent/: PLANS.md
.claude/agents/: code-bloat-detector.md
.github/workflows/: ci.yml
alignment-testing/: README.md  alignment_utils.py  debug_geometry.py  gd_vs_l-bfgs.py  optimization_steps.py  optimizer_comparison.py  run_alignment.py  run_laminography_alignment.py  run_quick_test.py  setup_jax_cache.sh  test_synthetic_alignment.py
bench/: README.md  fista_projection_benchmark.py  fitness.py  forward_projector.py  forward_residual.py  memory.py  metrics_schema.json  visualize.py
bench/fixtures/: README.md  align_small_v1.npz  recon_small_v1.npz  smoke_recon_v1.npz
bench/profiles/: accuracy_align_small.yaml  canary_align_parallel_3d_128_noisy.yaml  canary_convergence_align_parallel_3d_128_noisy.yaml  canary_iterative_parallel_160.yaml  canary_lamino_fbp_128.yaml  canary_measure_align_parallel_3d_128_noisy.yaml  canary_ref_align_parallel_3d_128_noisy.yaml  check_convergence_align_parallel_3d_256_fun.yaml  check_convergence_align_parallel_3d_64.yaml  check_convergence_align_parallel_3d_64_high_budget.yaml  memory_recon_small.yaml  screen_accuracy_align_parallel_3d_96.yaml  screen_convergence_align_parallel_3d_64.yaml  screen_convergence_align_parallel_3d_96.yaml  screen_memory_parallel_fista_128.yaml  screen_memory_sentinel_align_parallel_3d_192_fine.yaml  screen_speed_parallel_fbp_128.yaml  screen_ttq_memguard_align_parallel_3d_96.yaml  screen_ttq_memguard_align_parallel_3d_96_holdout.yaml  smoke.yaml  smoke_align.yaml  speed_recon_small.yaml
bench/reference/: canary_ref_align_parallel_3d_128_noisy.reference.example.json  screen_memory_sentinel_align_parallel_3d_192_fine.reference.example.json  screen_ttq_memguard_align_parallel_3d_96.reference.example.json
docs/: agent_goal_differentiable_stopped_detu_diagnosis.md  agent_goal_production_stopped_alignment.md  agent_goal_tomojax_v2_overnight_product_truth_20260513.md  agent_goal_tomojax_v2_production_hardening_20260512.md  agent_goal_tomojax_v2_productionization_20260512.md  align_config.toml  alignment-guide.md  alignment_lightning_engine.md  architecture_cleanup_audit_20260513.md  axes_unification_checklist.md  cli_reference.md  faq_troubleshooting.md  fista_constraints_validation_64.md  implementation_log.md  installation.md  known-limitations.md  misalign_modes.md  notes_lbfgs.md  oracle-rich-phantom-v1-parity-20260509.md  oracle_support_gauge_way_forward_20260510.md  pallas_supported_api.md  quickstart.md  real-laminography.md  recon_config.toml  schema_nxtomo.md  support-matrix.md  synthetic-tomography.md  troubleshooting.md  tutorial_end_to_end.md  tutorial_laminography.md  tutorial_single_sample.md
docs/archive/: align_config.toml  index.md  pallas_supported_api.md  recon_config.toml
docs/benchmark_runs/: 2026-05-06-phase8-multi-case-32.md  2026-05-06-phase8-setup-global-gpu-ladder.md  2026-05-07-phase8-128-supported-scale-gate.md  2026-05-07-phase8-anchored-preview.md  2026-05-07-phase8-anchored-schur-volume-gate.md  2026-05-07-phase8-center-gauge-gate.md  2026-05-07-phase8-constrained-stopped-preview-gate.md  2026-05-07-phase8-core-projector-rebaseline.md  2026-05-07-phase8-heldout-schur-gate.md  2026-05-07-phase8-iteration-absorption-diagnosis.md  2026-05-07-phase8-supported-only-oracle.md  2026-05-07_phase8_five_case_128_cuda.md  2026-05-08-phase8-alpha-beta-staging-gate.md  2026-05-08-phase8-axis-gauge-stopped-detu.md  2026-05-08-phase8-candidate-refresh-128-scale-gate.md  2026-05-08-phase8-candidate-refresh-stopped-detu.md  2026-05-08-phase8-final-pose-polish-gate.md  2026-05-08-phase8-fixed-truth-sigma-gate.md  2026-05-08-phase8-hard-x-gauge-diagnostic.md  2026-05-08-phase8-no-fista-first-preview-gate.md  2026-05-08-phase8-phi-polish-diagnostic.md  2026-05-08-phase8-phi-polish-stage-gate.md  2026-05-08-phase8-pose-only-trust-diagnostic.md  2026-05-08-phase8-staged-theta-gate.md  (+25 more)
examples/: README.md  run_fista_tv.py  run_parallel_projector.py  run_parallel_projector_misaligned.py  run_parallel_reconstruction.py  run_parallel_reconstruction_comparison.py  simulate_and_reconstruct.py
next/: IMPLEMENTATION_CHECKLIST.md  README.md  README_v2.md
scripts/: README.md  alignment_visuals.py  exp_spdhg_bench.py  exp_spdhg_report.py  generate_alignment_before_after_128.py  nexus_data_wrangler.py  perf_harness.py  plot_tem_grid_xy_intensity_profiles.py  render_tem_grid_pose_3d.py  run_real_lamino_native_setup_pose_256.py
tests/: README.md  _helpers.py  conftest.py  test_accelerator_smoke_tool.py  test_align_auto_cli.py  test_align_checkpoint.py  test_align_chunking.py  test_align_contracts.py  test_align_early_stop.py  test_align_gauge.py  test_align_gn_candidates.py  test_align_loss_logic.py  test_align_motion_models.py  test_align_optimizers.py  test_align_params_export.py  test_align_profiles.py  test_align_proposals.py  test_align_quick.py  test_align_roi.py  test_align_verification.py  test_alignment_core_boundaries.py  test_alignment_dofs.py  test_alignment_execution.py  test_alignment_gauge_registry.py  test_alignment_loss_kernels.py  test_alignment_model_contracts.py  test_alignment_objectives.py  test_alignment_scenario_catalog.py  test_alignment_schedules.py  test_alignment_state.py  test_alternating_benchmark_criteria.py  test_alternating_geometry_update_policy.py  test_alternating_observability.py  test_alternating_solver_smoke.py  test_article_alignment_visuals.py  test_axes_io.py  test_bench_alignment_objective.py  test_bench_alignment_smoke.py  test_bench_astra_parallel.py  test_bench_benchmark_suite.py  (+123 more)
tools/: check_public_imports.py  run_detu_variable_projection_diagnostic.py  run_product_truth_overnight_20260513.sh  run_rich_phantom_loss_comparison.py  run_rich_phantom_v1_parity_gate.py  smoke_accelerator.py  smoke_cli_workflow.py  smoke_installed_wheel.py
(+551 files in other folders)
