[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "tomojax"
version = "0.2.0"
description = "TomoJAX — CT projector, reconstruction, and alignment (v2)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-only"
authors = [{ name = "Tristan Manchester", email = "tristan.manchester@diamond.ac.uk" }]
dependencies = [
    "h5py>=3.14.0,<4",
    "imageio>=2.37.3,<3",
    "jax>=0.10,<0.11",
    "numpy>=2.3.2,<3",
    "optax>=0.2.5,<0.3",
    "scipy>=1.16.1,<2",
    "tqdm>=4.67.1,<5",
]

[project.optional-dependencies]
bench = [
    "astra-toolbox>=2.4.1,<3",
    "matplotlib>=3.10.5,<4",
    "nvidia-ml-py>=13.580.82,<14",
    "psutil>=7.0.0,<8",
    "pyyaml>=6.0.2,<7",
    "scikit-image>=0.25.2,<0.26",
]
cpu = [
    "jax>=0.10,<0.11",
]
cuda12 = [
    "jax[cuda12]>=0.10,<0.11 ; platform_system == 'Linux'",
]

[project.scripts]
tomojax = "tomojax.cli.main:main"

[dependency-groups]
dev = [
    "basedpyright>=1.34,<2",
    "import-linter>=2,<3",
    "pre-commit>=4,<5",
    "psutil>=7.0.0,<8",
    "pytest>=8,<9",
    "pyyaml>=6.0.2,<7",
    "ruff>=0.11,<0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # import sorting
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplification
    "C4",     # comprehensions
    "PIE",    # misc cleanup
    "RET",    # return statements
    "ARG",    # unused arguments
    "PTH",    # pathlib
    "PL",     # pylint subset
    "RUF",    # ruff-specific
    "NPY",    # numpy
    "PERF",   # performance
    "PT",     # pytest style
    "TID",    # tidy imports
    "TC",     # type-checking imports
    "ANN",    # annotations
    "D",      # docstrings
    "ERA",    # commented-out code
]

ignore = [
    "ANN401",   # allow Any at explicit backend/plugin boundaries only
    "D105",     # magic method docstrings are noise
    "D107",     # __init__ docstrings are noise
    "PLR0913",  # numerical kernels sometimes need many parameters
    "PLR2004",  # numerical thresholds are often clearer inline
    "TRY003",   # scientific error messages benefit from explicit text
    "EM101",
    "EM102",
]

fixable = ["ALL"]
unfixable = [
    "ERA001",   # do not auto-delete commented code; force agent to decide
]

[tool.ruff.lint.isort]
known-first-party = ["tomojax"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",
    "ANN",
    "PLR2004",
]
"benchmarks/**" = [
    "D",
    "ANN",
]
"src/tomojax/bench/**" = [
    "D",      # developer diagnostics, not production API docs
    "ANN",    # benchmark callbacks often wrap JAX/ASTRA/Pallas callables
    "PL",     # reporting/CLI runners are intentionally orchestration-heavy
    "PERF",   # benchmark reporting clarity is preferred over micro-style rewrites
    "E501",   # markdown table literals are easier to audit inline
]
"src/tomojax/backends/pallas/**" = [
    "PLR0913",
]
"src/tomojax/**/_*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
]

[tool.basedpyright]
include = ["src/tomojax", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
strict = ["src/tomojax"]

reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportAny = "warning"
reportPrivateUsage = "error"
reportUnusedCallResult = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: fast CPU-only tests",
    "integration: multi-module tests",
    "gpu: requires GPU",
    "pallas: requires Pallas-capable backend",
    "slow: slow tests",
    "benchmark: benchmark/regression tests",
]
