[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "tomojax"
version = "0.2.0"
description = "TomoJAX — CT projector, reconstruction, and alignment"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-only"
authors = [{ name = "Tristan Manchester", email = "tristan.manchester@diamond.ac.uk" }]
dependencies = [
    "h5py>=3.14.0,<4",
    "imageio>=2.37.3,<3",
    "jax>=0.10,<0.11",
    "numpy>=2.3.2,<3",
    "optax>=0.2.5,<0.3",
    "scipy>=1.16.1,<2",
]

[project.optional-dependencies]
cpu = [
    "jax>=0.10,<0.11",
]
cuda12 = [
    "jax[cuda12]>=0.10,<0.11 ; platform_system == 'Linux'",
]
progress = [
    "tqdm>=4.67.1,<5",
]

[project.scripts]
tomojax = "tomojax.cli.main:main"

[dependency-groups]
dev = [
    "basedpyright>=1.34,<2",
    "import-linter>=2,<3",
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "pytest-cov>=7,<8",
    "ruff>=0.11,<0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "tools", "examples"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "PIE",
    "RET",
    "ARG",
    "PTH",
    "PL",
    "RUF",
    "NPY",
    "PERF",
    "PT",
    "TID",
    "TC",
    "ANN",
    "D",
]
ignore = [
    "ANN401",
    "D105",
    "D107",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "EM101",
    "EM102",
    "PLC0415",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["tomojax"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",
    "ANN",
    "ARG",
    "C408",
    "E501",
    "PLR2004",
    "PTH",
    "PT011",
    "PT018",
    "TC",
]
"examples/**" = [
    "D",
    "T201",
]
"src/tomojax/**/_*.py" = [
    "ANN001",
    "ANN202",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "TC",
]

[tool.basedpyright]
include = [
    "src/tomojax/align/api.py",
    "src/tomojax/align/__init__.py",
    "src/tomojax/backends/api.py",
    "src/tomojax/cli",
    "src/tomojax/core/api.py",
    "src/tomojax/datasets/api.py",
    "src/tomojax/forward/api.py",
    "src/tomojax/geometry/api.py",
    "src/tomojax/io",
    "src/tomojax/motion/api.py",
    "src/tomojax/nuisance/api.py",
    "src/tomojax/recon/api.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportAny = "warning"
reportPrivateUsage = "error"
reportUnusedCallResult = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "surface: public API/CLI/import-boundary tests for the production feedback loop",
    "numerical: CPU numerical reconstruction/alignment tests that may compile JAX kernels",
    "gpu: requires GPU",
    "pallas: requires Pallas-capable backend",
    "slow: slow tests",
]

[tool.coverage.run]
branch = true
source = ["src/tomojax"]
omit = [
    "src/tomojax/core/pallas/*",
]

[tool.coverage.report]
fail_under = 58.0
precision = 1
show_missing = true
skip_covered = true
